--- a/ArmRobot/Packages/manifest.json
+++ b/ArmRobot/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "com.unity.ext.nunit": "1.0.0",
-    "com.unity.ide.rider": "2.0.1",
-    "com.unity.ide.vscode": "1.2.0",
+    "com.unity.ide.rider": "2.0.5",
+    "com.unity.ide.vscode": "1.2.1",
     "com.unity.ml-agents": "1.2.0-preview",
     "com.unity.ml-agents.extensions": "git+https://github.com/Unity-Technologies/ml-agents.git?path=com.unity.ml-agents.extensions",
-    "com.unity.test-framework": "1.1.13",
-    "com.unity.textmeshpro": "3.0.0-preview.1",
+    "com.unity.test-framework": "1.1.16",
+    "com.unity.textmeshpro": "3.0.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
